# template_ml_project

./: README.md  logging_config_template.json  main.py  project_builder.py  project_structure.yaml  pyproject.toml
configs/logging/: logging_config.json
src/: __init__.py
src/train/: __init__.py
src/utils/: __init__.py
