[project]
name = "template-ml-project"
version = "0.1.0"
description = "A comprehensive Python project framework for machine learning research and experimentation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "pandas-ta>=0.4.71b0",
    "ruff>=0.14.8",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "yfinance>=0.2.66",
]
